feature: write imports in index.js resolver file

--- a/src/templates/resolver.js.ejs
+++ b/src/templates/resolver.js.ejs
@@ -1,4 +1,4 @@
-const <%= props.name %> = require('../models/<%= props.name %>.js')
+const <%= props.fileName %> = require('../models/<%= props.fileName %>.js')
 
 exports.queries = {
 
